--- a/package.json
+++ b/package.json
@@ -1,24 +1,35 @@
 {
-  "name": "frontend",
+  "name": "equillibrix-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --check --ignore-path .gitignore {app,pages,src}/**/*.{js,jsx,ts,tsx,json,md}",
+    "prettier:fix": "prettier --write --ignore-path .gitignore  {app,pages,src}/**/*.{js,jsx,ts,tsx,json,md}"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.8",
+    "@reown/appkit": "^1.3.2",
+    "@reown/appkit-adapter-wagmi": "^1.3.2",
+    "@tanstack/react-query": "^5.59.20",
+    "framer-motion": "^11.11.15",
+    "next": "14.2.17",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.17"
+    "viem": "^2.21.45",
+    "wagmi": "^2.12.31",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
