--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@reown/appkit": "^1.3.2",
     "@reown/appkit-adapter-wagmi": "^1.3.2",
     "@tanstack/react-query": "^5.59.20",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.11.15",
     "next": "14.2.17",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^2.5.4",
     "viem": "^2.21.45",
     "wagmi": "^2.12.31",
     "zustand": "^5.0.1"
