--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react-dom": "^18",
     "postcss": "^8",
     "prettier": "^3.3.3",
+    "sass": "^1.81.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
