--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.2.17",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.5.4",
     "viem": "^2.21.45",
     "wagmi": "^2.12.31",
